--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,6 +7,78 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
+  <style>
+    .video-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 20px;
+      margin: 40px 0;
+      padding: 0 20px;
+      max-width: 1200px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .video-card {
+      background: white;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .video-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+    }
+    .video-thumbnail {
+      width: 100%;
+      height: 200px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 48px;
+    }
+    .video-info {
+      padding: 16px;
+    }
+    .video-title {
+      font-weight: 600;
+      margin-bottom: 8px;
+      color: #333;
+    }
+    .video-meta {
+      display: flex;
+      justify-content: space-between;
+      font-size: 12px;
+      color: #666;
+    }
+    .gallery-header {
+      text-align: center;
+      margin: 60px 0 30px 0;
+    }
+    .refresh-btn {
+      background: #0070f3;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    .refresh-btn:hover {
+      background: #0051a8;
+    }
+    .theme-dark .video-card {
+      background: #2a2a2a;
+    }
+    .theme-dark .video-title {
+      color: white;
+    }
+    .theme-dark .video-meta {
+      color: #ccc;
+    }
+  </style>
 </head>
 <body>
   <div class="page" id="page">
@@ -68,20 +139,24 @@
         </aside>
       </header>
 
-      <section class="features" aria-label="Key features">
-        <div class="feature-card">
-          <h4>Live Grid</h4>
-          <p class="muted">Experience a dynamic feed that previews videos with subtle motion and color-driven tiles.</p>
-        </div>
-        <div class="feature-card">
-          <h4>Creator Tools</h4>
-          <p class="muted">Connect with the AI tools creators actually use and let creators showcase what those tools can do.</p>
-        </div>
-        <div class="feature-card">
-          <h4>Monetize</h4>
-          <p class="muted">Ad spaces, sponsorships, and mint-based rewards — built for creators and brands.</p>
-        </div>
+      <section class="gallery-header">
+        <h2>Community Videos</h2>
+        <p class="muted">Watch what creators are building with AI</p>
+        <button class="refresh-btn" id="refreshGallery">Refresh Gallery</button>
       </section>
+
+      <div class="video-gallery" id="videoGallery">
+        <div class="video-card">
+          <div class="video-thumbnail">🎥</div>
+          <div class="video-info">
+            <div class="video-title">Upload your first video!</div>
+            <div class="video-meta">
+              <span>Just now</span>
+              <span>0 views</span>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <section class="upload" aria-label="Upload video" style="max-width: 600px; margin: 40px auto; padding: 0 20px;">
         <div class="beta-card">
