--- a/index.html
+++ b/index.html
@@ -1,156 +1,67 @@
 
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AIMint — Watch. Create. Enovate.</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
-</head>
-<body>
-  <div class="page" id="page">
-    <nav class="topbar" role="navigation" aria-label="Main Navigation">
-      <div class="brand">
-        <img src="assets/logo.svg" alt="AIMint logo" class="nav-logo" />
-        <div style="display:flex;flex-direction:column;">
-          <div class="brand-name">AIMint</div>
-          <div class="muted small">Where AI Creates</div>
-        </div>
-      </div>
-
-      <div class="nav-actions" role="toolbar" aria-label="Top actions">
-        <button class="btn-ghost" id="exploreBtn">Explore</button>
-        <button class="btn btn-primary" id="joinBtn">Join Beta</button>
-      </div>
-    </nav>
-
-    <main class="container">
-      <header class="hero" role="banner" aria-labelledby="heroTitle">
-        <div class="hero-card">
-          <div class="hero-inner">
-            <h1 id="heroTitle" class="hero-title">
-              <span class="word">Watch.</span>
-              <span class="word">Create.</span>
-              <span class="word gradient">Enovate.</span>
-            </h1>
-            <p class="hero-sub">A living grid for AI video creators. Discover the tools creators use, remix their work, and sponsor the future of AI content.</p>
-
-            <div class="hero-cta" role="group" aria-label="Primary actions">
-              <button class="btn btn-primary" id="ctaJoin">Get Early Access</button>
-              <button class="btn btn-ghost" id="ctaUpload">Upload a Demo</button>
-              <button class="btn btn-ghost" id="ctaHow">How it works</button>
-            </div>
-
-            <div class="categories-strip" aria-label="Featured categories" id="categoryStrip">
-              <button class="category-pill active">All</button>
-              <button class="category-pill">AI Music</button>
-              <button class="category-pill">AI Art</button>
-              <button class="category-pill">AI Stories</button>
-              <button class="category-pill">AI Voices</button>
-              <button class="category-pill">AI Shorts</button>
-            </div>
-          </div>
-        </div>
-
-        <aside class="right-card" aria-label="Sponsors and info">
-          <div>
-            <h3>For Brands</h3>
-            <p class="muted">Reach the creators building the future. Sponsor categories, run tool integrations, or partner on creator challenges.</p>
-          </div>
-          <div style="display:flex;gap:8px;flex-direction:column;align-items:stretch">
-            <button class="btn-primary" id="contactSales">Contact Sales</button>
-            <button class="btn-ghost" id="viewKit">Download Media Kit</button>
-          </div>
-        </aside>
-      </header>
-
-      <section class="gallery-header">
-        <h2>Community Videos</h2>
-        <p class="muted">Watch what creators are building with AI</p>
-        <button class="refresh-btn" id="refreshGallery">Refresh Gallery</button>
-      </section>
-
-      <div class="video-gallery" id="videoGallery">
-        <div class="video-card">
-          <div class="video-thumbnail">🎥</div>
-          <div class="video-info">
-            <div class="video-title">Upload your first video!</div>
-            <div class="video-meta">
-              <span>Just now</span>
-              <span>0 views</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <section class="upload" aria-label="Upload video">
-        <div class="beta-card">
-          <h3>Upload a Video Demo</h3>
-          <p class="muted">Test our video upload feature (Beta)</p>
-          <input type="file" id="videoUpload" accept="video/*" style="margin: 15px 0;" />
-          <div style="display:flex;gap:8px;margin-top:8px">
-            <button class="btn btn-primary" id="uploadBtn">Upload Video</button>
-            <div id="uploadMessage" class="muted small"></div>
-          </div>
-          <div id="uploadProgress" style="margin-top: 10px; display: none;">
-            <div style="background: #f0f0f0; border-radius: 10px; height: 6px;">
-              <div id="progressBar" style="background: #0070f3; height: 100%; width: 0%; border-radius: 10px; transition: width 0.3s;"></div>
-            </div>
-            <div id="progressText" class="muted small" style="margin-top: 5px;">0%</div>
-          </div>
-        </div>
-      </section>
-
-      <section class="beta" aria-label="Join beta">
-        <div class="beta-card">
-          <h3>Join the AIMint Beta</h3>
-          <p class="muted">Be first to create, upload, and test AI tools. We'll email you when the beta opens.</p>
-          <form id="betaForm">
-            <input id="betaName" type="text" placeholder="Your name" required />
-            <input id="betaEmail" type="email" placeholder="Your email" required />
-            <div style="display:flex;gap:8px;margin-top:8px">
-              <button type="submit" class="btn btn-primary">Join Beta</button>
-              <div id="betaMessage" class="muted small"></div>
-            </div>
-          </form>
-        </div>
-      </section>
-
-    </main>
-
-    <footer class="main-footer" role="contentinfo">
-      © <span id="year"></span> AIMint — Built for AI creators • <a href="mailto:contact@aimint.com" class="muted">contact@aimint.com</a>
-    </footer>
+<!-- User Dashboard (Hidden by default) -->
+<section id="userDashboard" style="display: none; padding: 40px 24px; max-width: 1400px; margin: 0 auto;">
+  <div class="dashboard-header" style="margin-bottom: 40px;">
+    <h2 style="color: #E8E8E8; margin-bottom: 10px;">Creator Dashboard</h2>
+    <p class="muted">Manage your videos, track performance, and grow your audience</p>
   </div>
 
-  <script src="main.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', ()=>{
-      document.getElementById('year').textContent = new Date().getFullYear();
-      const form = document.getElementById('betaForm');
-      const msg = document.getElementById('betaMessage');
-      form.addEventListener('submit', async (e)=>{
-        e.preventDefault();
-        const name = document.getElementById('betaName').value.trim();
-        const email = document.getElementById('betaEmail').value.trim();
-        msg.textContent = 'Sending...';
-        try{
-          const res = await fetch('https://aimint-backend-api.onrender.com/api/beta-signup', {
-            method: 'POST',
-            headers: {'Content-Type':'application/json'},
-            body: JSON.stringify({ name, email })
-          });
-          if(res.ok){ 
-            const data = await res.json();
-            msg.textContent = data.message || 'Thanks — we saved your spot!'; 
-            form.reset(); 
-          }
-          else { msg.textContent = 'Error — try again.'; }
-        }catch(err){ console.error(err); msg.textContent = 'Network error.'; }
-      });
-    });
-  </script>
-</body>
-</html>
+  <div class="dashboard-stats" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 40px;">
+    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 24px; text-align: center;">
+      <div style="font-size: 2rem; color: #00D4FF; margin-bottom: 8px;">0</div>
+      <div style="color: #E8E8E8;">Total Videos</div>
+    </div>
+    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #FF00FF; border-radius: 12px; padding: 24px; text-align: center;">
+      <div style="font-size: 2rem; color: #FF00FF; margin-bottom: 8px;">0</div>
+      <div style="color: #E8E8E8;">Total Views</div>
+    </div>
+    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 24px; text-align: center;">
+      <div style="font-size: 2rem; color: #00D4FF; margin-bottom: 8px;">0</div>
+      <div style="color: #E8E8E8;">Total Likes</div>
+    </div>
+    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #FF00FF; border-radius: 12px; padding: 24px; text-align: center;">
+      <div style="font-size: 2rem; color: #FF00FF; margin-bottom: 8px;">0</div>
+      <div style="color: #E8E8E8;">Followers</div>
+    </div>
+  </div>
+
+  <div class="dashboard-content" style="display: grid; grid-template-columns: 2fr 1fr; gap: 40px;">
+    <!-- My Videos Section -->
+    <div class="my-videos">
+      <h3 style="color: #E8E8E8; margin-bottom: 20px;">My Videos</h3>
+      <div id="userVideos" class="video-gallery">
+        <div class="video-card" style="text-align: center; padding: 40px; grid-column: 1 / -1;">
+          <div class="video-thumbnail">📹</div>
+          <div class="video-info">
+            <div class="video-title">No videos uploaded yet</div>
+            <p class="muted">Start uploading to build your video portfolio!</p>
+            <button class="btn btn-primary" onclick="showUploadSection()" style="margin-top: 15px;">Upload First Video</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Quick Actions Sidebar -->
+    <div class="quick-actions">
+      <h3 style="color: #E8E8E8; margin-bottom: 20px;">Quick Actions</h3>
+      
+      <div class="action-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 20px; margin-bottom: 20px;">
+        <h4 style="color: #00D4FF; margin-bottom: 10px;">🎬 Upload Video</h4>
+        <p class="muted" style="margin-bottom: 15px; font-size: 14px;">Share your latest AI creation with the world</p>
+        <button class="btn btn-primary" onclick="showUploadSection()" style="width: 100%;">Upload New Video</button>
+      </div>
+
+      <div class="action-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #FF00FF; border-radius: 12px; padding: 20px; margin-bottom: 20px;">
+        <h4 style="color: #FF00FF; margin-bottom: 10px;">📊 Channel Analytics</h4>
+        <p class="muted" style="margin-bottom: 15px; font-size: 14px;">Track your growth and performance</p>
+        <button class="btn btn-ghost" onclick="showAnalytics()" style="width: 100%;">View Analytics</button>
+      </div>
+
+      <div class="action-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 20px;">
+        <h4 style="color: #00D4FF; margin-bottom: 10px;">⚡ AI Tools</h4>
+        <p class="muted" style="margin-bottom: 15px; font-size: 14px;">Enhance your videos with AI magic</p>
+        <button class="btn btn-ghost" onclick="showAITools()" style="width: 100%;">Open AI Studio</button>
+      </div>
+    </div>
+  </div>
+</section>
