--- a/index.html
+++ b/index.html
@@ -1,67 +1,46 @@
-
-<!-- User Dashboard (Hidden by default) -->
-<section id="userDashboard" style="display: none; padding: 40px 24px; max-width: 1400px; margin: 0 auto;">
-  <div class="dashboard-header" style="margin-bottom: 40px;">
-    <h2 style="color: #E8E8E8; margin-bottom: 10px;">Creator Dashboard</h2>
-    <p class="muted">Manage your videos, track performance, and grow your audience</p>
-  </div>
-
-  <div class="dashboard-stats" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 40px;">
-    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 24px; text-align: center;">
-      <div style="font-size: 2rem; color: #00D4FF; margin-bottom: 8px;">0</div>
-      <div style="color: #E8E8E8;">Total Videos</div>
-    </div>
-    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #FF00FF; border-radius: 12px; padding: 24px; text-align: center;">
-      <div style="font-size: 2rem; color: #FF00FF; margin-bottom: 8px;">0</div>
-      <div style="color: #E8E8E8;">Total Views</div>
-    </div>
-    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 24px; text-align: center;">
-      <div style="font-size: 2rem; color: #00D4FF; margin-bottom: 8px;">0</div>
-      <div style="color: #E8E8E8;">Total Likes</div>
-    </div>
-    <div class="stat-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #FF00FF; border-radius: 12px; padding: 24px; text-align: center;">
-      <div style="font-size: 2rem; color: #FF00FF; margin-bottom: 8px;">0</div>
-      <div style="color: #E8E8E8;">Followers</div>
-    </div>
-  </div>
-
-  <div class="dashboard-content" style="display: grid; grid-template-columns: 2fr 1fr; gap: 40px;">
-    <!-- My Videos Section -->
-    <div class="my-videos">
-      <h3 style="color: #E8E8E8; margin-bottom: 20px;">My Videos</h3>
-      <div id="userVideos" class="video-gallery">
-        <div class="video-card" style="text-align: center; padding: 40px; grid-column: 1 / -1;">
-          <div class="video-thumbnail">📹</div>
-          <div class="video-info">
-            <div class="video-title">No videos uploaded yet</div>
-            <p class="muted">Start uploading to build your video portfolio!</p>
-            <button class="btn btn-primary" onclick="showUploadSection()" style="margin-top: 15px;">Upload First Video</button>
-          </div>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>AIMint — Watch. Create. Enovate.</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
+</head>
+<body>
+  <div class="page" id="page">
+    <nav class="topbar">
+      <div class="brand">
+        <img src="assets/logo.svg" alt="AIMint logo" class="nav-logo" />
+        <div style="display:flex;flex-direction:column;">
+          <div class="brand-name">AIMint</div>
+          <div class="muted small">Where AI Creates</div>
         </div>
       </div>
-    </div>
-
-    <!-- Quick Actions Sidebar -->
-    <div class="quick-actions">
-      <h3 style="color: #E8E8E8; margin-bottom: 20px;">Quick Actions</h3>
-      
-      <div class="action-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 20px; margin-bottom: 20px;">
-        <h4 style="color: #00D4FF; margin-bottom: 10px;">🎬 Upload Video</h4>
-        <p class="muted" style="margin-bottom: 15px; font-size: 14px;">Share your latest AI creation with the world</p>
-        <button class="btn btn-primary" onclick="showUploadSection()" style="width: 100%;">Upload New Video</button>
+      <div class="nav-actions">
+        <button class="btn-ghost" id="exploreBtn">Explore</button>
+        <button class="btn btn-primary" id="joinBtn">Join Beta</button>
       </div>
+    </nav>
 
-      <div class="action-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #FF00FF; border-radius: 12px; padding: 20px; margin-bottom: 20px;">
-        <h4 style="color: #FF00FF; margin-bottom: 10px;">📊 Channel Analytics</h4>
-        <p class="muted" style="margin-bottom: 15px; font-size: 14px;">Track your growth and performance</p>
-        <button class="btn btn-ghost" onclick="showAnalytics()" style="width: 100%;">View Analytics</button>
-      </div>
-
-      <div class="action-card" style="background: rgba(10, 4, 28, 0.8); border: 1px solid #00D4FF; border-radius: 12px; padding: 20px;">
-        <h4 style="color: #00D4FF; margin-bottom: 10px;">⚡ AI Tools</h4>
-        <p class="muted" style="margin-bottom: 15px; font-size: 14px;">Enhance your videos with AI magic</p>
-        <button class="btn btn-ghost" onclick="showAITools()" style="width: 100%;">Open AI Studio</button>
-      </div>
-    </div>
+    <main>
+      <section class="hero">
+        <div class="hero-card">
+          <h1 class="hero-title">
+            <span class="word">Watch.</span>
+            <span class="word">Create.</span>
+            <span class="word gradient">Enovate.</span>
+          </h1>
+          <p class="hero-sub">A living grid for AI video creators. Discover the tools creators use, remix their work, and sponsor the future of AI content.</p>
+          <div class="hero-cta">
+            <button class="btn btn-primary" id="ctaJoin">Get Early Access</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </div>
-</section>
+
+  <script src="main.js"></script>
+</body>
+</html>
