--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AIMint — Watch. Create. Enovate.</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AIMint — Watch. Create. Enovate.</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="page" id="page">
-    <nav class="topbar">
-      <div class="brand">
-        <div class="brand-name">AIMint</div>
-        <div class="muted small">Where AI Creates</div>
-      </div>
-      <div class="nav-actions">
-        <button class="btn-ghost" id="exploreBtn">Explore</button>
-        <button class="btn btn-primary" id="joinBtn">Join Beta</button>
-      </div>
-    </nav>
+    <div class="page">
+        <nav class="topbar">
+            <div class="brand">
+                <div class="brand-name">AIMint</div>
+                <div class="muted small">Where AI Creates</div>
+            </div>
+            <div class="nav-actions">
+                <button class="btn-ghost" onclick="alert('Explore coming soon!')">Explore</button>
+                <button class="btn btn-primary" onclick="alert('Join beta!')">Join Beta</button>
+            </div>
+        </nav>
 
-    <main>
-      <section class="hero">
-        <div class="hero-card">
-          <h1 class="hero-title">
-            <span class="word">Watch.</span>
-            <span class="word">Create.</span>
-            <span class="word gradient">Enovate.</span>
-          </h1>
-          <p class="hero-sub">A living grid for AI video creators. Discover the tools creators use, remix their work, and sponsor the future of AI content.</p>
-          <div class="hero-cta">
-            <button class="btn btn-primary" id="ctaJoin">Get Early Access</button>
-          </div>
-        </div>
-      </section>
-    </main>
-  </div>
-
-  <script src="main.js"></script>
+        <main class="hero">
+            <div class="hero-card">
+                <h1 class="hero-title">
+                    <span class="word">Watch.</span>
+                    <span class="word">Create.</span>
+                    <span class="word gradient">Enovate.</span>
+                </h1>
+                <p class="hero-sub">A living grid for AI video creators.</p>
+                <button class="btn btn-primary" onclick="alert('Early access!')">Get Early Access</button>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
