--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <div class="muted small">Where AI Creates</div>
             </div>
             <div class="nav-actions">
-                <button class="btn-ghost" onclick="alert('Explore coming soon!')">Explore</button>
-                <button class="btn btn-primary" onclick="alert('Join beta!')">Join Beta</button>
+                <button class="btn-ghost" id="exploreBtn">Explore</button>
+                <button class="btn btn-primary" id="joinBtn">Join Beta</button>
             </div>
         </nav>
 
@@ -27,10 +27,14 @@
                     <span class="word">Create.</span>
                     <span class="word gradient">Enovate.</span>
                 </h1>
-                <p class="hero-sub">A living grid for AI video creators.</p>
-                <button class="btn btn-primary" onclick="alert('Early access!')">Get Early Access</button>
+                <p class="hero-sub">A living grid for AI video creators. Discover the tools creators use, remix their work, and sponsor the future of AI content.</p>
+                <div class="hero-cta">
+                    <button class="btn btn-primary" id="ctaJoin">Get Early Access</button>
+                </div>
             </div>
         </main>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
