--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <div class="muted small">Where AI Creates</div>
             </div>
             <div class="nav-actions">
-                <button class="btn-ghost" id="exploreBtn">Explore</button>
-                <button class="btn btn-primary" id="joinBtn">Join Beta</button>
+                <button class="btn-ghost" onclick="alert('Explore feature coming soon!')">Explore</button>
+                <button class="btn btn-primary" onclick="alert('Join our beta program! Enter your email:')">Join Beta</button>
             </div>
         </nav>
 
@@ -29,12 +29,12 @@
                 </h1>
                 <p class="hero-sub">A living grid for AI video creators. Discover the tools creators use, remix their work, and sponsor the future of AI content.</p>
                 <div class="hero-cta">
-                    <button class="btn btn-primary" id="ctaJoin">Get Early Access</button>
+                    <button class="btn btn-primary" onclick="alert('Get early access! Enter your email:')">Get Early Access</button>
                 </div>
             </div>
         </main>
     </div>
 
-    <script src="main.js"></script>
+    <!-- NO MAIN.JS - Remove this line completely -->
 </body>
 </html>
