--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <div class="page">
         <nav class="topbar">
             <div class="brand">
-                <div class="brand-name">AIMint</div>
-                <div class="muted small">Where AI Creates</div>
+                <div class="logo-text">⚡</div>
+                <div style="display:flex;flex-direction:column;">
+                    <div class="brand-name">AIMint</div>
+                    <div class="muted small">Where AI Creates</div>
+                </div>
             </div>
             <div class="nav-actions">
                 <button class="btn-ghost" onclick="alert('Explore feature coming soon!')">Explore</button>
@@ -34,7 +37,5 @@
             </div>
         </main>
     </div>
-
-    <!-- NO MAIN.JS - Remove this line completely -->
 </body>
 </html>
