--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
     <div class="page">
         <nav class="topbar">
             <div class="brand">
-                <div class="logo-text">⚡</div>
-                <div style="display:flex;flex-direction:column;">
-                    <div class="brand-name">AIMint</div>
-                    <div class="muted small">Where AI Creates</div>
-                </div>
+                <div class="brand-name">AIMint</div>
+                <div class="muted small">Where AI Creates</div>
             </div>
             <div class="nav-actions">
                 <button class="btn-ghost" onclick="alert('Explore feature coming soon!')">Explore</button>
-                <button class="btn btn-primary" onclick="alert('Join our beta program! Enter your email:')">Join Beta</button>
+                <button class="btn btn-primary" onclick="alert('Join our beta program!')">Join Beta</button>
             </div>
         </nav>
 
@@ -32,7 +29,7 @@
                 </h1>
                 <p class="hero-sub">A living grid for AI video creators. Discover the tools creators use, remix their work, and sponsor the future of AI content.</p>
                 <div class="hero-cta">
-                    <button class="btn btn-primary" onclick="alert('Get early access! Enter your email:')">Get Early Access</button>
+                    <button class="btn btn-primary" onclick="alert('Get early access!')">Get Early Access</button>
                 </div>
             </div>
         </main>
