--- a/index.html
+++ b/index.html
@@ -74,6 +74,26 @@
                     <button class="btn btn-primary" onclick="loadMoreVideos()">Load More Creations</button>
                 </div>
             </section>
+
+            <!-- Waitlist Section -->
+            <section class="waitlist-section">
+                <div class="waitlist-card">
+                    <h2>Join the AI Video Revolution</h2>
+                    <p class="muted">Be among the first creators to build the future of AI content</p>
+                    
+                    <div class="waitlist-form">
+                        <input type="email" placeholder="Your email address" class="waitlist-input" id="waitlistEmail">
+                        <button class="btn btn-primary" onclick="joinWaitlist()">Join Waitlist</button>
+                    </div>
+                    
+                    <div class="waitlist-stats">
+                        <div class="waitlist-stat">
+                            <span class="stat-number" id="waitlistCount">127</span>
+                            <span class="stat-label">Creators Joined</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 
