--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <div class="muted small">Where AI Creates</div>
             </div>
             <div class="nav-actions">
-                <button class="btn-ghost" onclick="scrollToVideos()">Explore</button>
+                <a href="index.html" class="btn-ghost active">Home</a>
+                <a href="about.html" class="btn-ghost">About</a>
+                <a href="features.html" class="btn-ghost">Features</a>
                 <button class="btn btn-primary" onclick="showUploadModal()">Upload Creation</button>
             </div>
         </nav>
